<resources>
    <string name="app_name">Projet</string>

    <!--LoginActivity-->
    <string name="textPassword">Password</string>
    <string name="btnSignIn">Sign in</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>

    <!-- Strings related to login -->

    <string name="title_activity_play_ground_menu" translatable="false">PlayGroundMenu</string>

    <!-- PLayGroundListMenu -->
    <string name="action_stwich_worker">Worker</string>
    <string name="action_stwich_playground">PlayGround</string>
    <string name="title_activity_play_ground_sub_menu" translatable="false">PlayGroundSubMenu</string>
    <string name="action_settings">Settings</string>

    <!-- PlayGroundSubMenu - Task TO Do -->
    <string name="title_PlayGroundSubMenu_TaskToDo" translatable="false">Tasks to do</string>


    <!-- String Task-->
    <string name="Playground_brute_textView">Playground</string>
    <string name="Description_brute_textView">Description</string>
    <string name="Observation_brute_textView">Observation</string>
    <string name="NeedsMaterials_brute_textView">Needs Materials</string>

    <!-- String Worker -->
    <string name="Firstname_brute_textView">Firstname</string>
    <string name="Lastname_brute_textView">Lastname</string>
    <string name="Cellphone_brute_textView">Cellphone</string>
    <string name="taskDescription" translatable="false">taskDescription</string>


    <string name="PlayGroundName">PlayGroundName</string>
    <string name="btnTaskToDo">Task To Do</string>
    <string name="btnLastUpdate">Last update</string>
    <string name="btnAddTask">Add Task</string>
    <string name="taskLastUpdate" translatable="false">taskLastUpdate</string>
    <string name="UserName">User Name</string>
    <string name="PlayGroundCityManagerLogin">PlayGround City Manager Login</string>
    <string name="Login_textView">Login</string>
    <string name="txtbTown">Town</string>
    <string name="txtBName">Place\'s name</string>
    <string name="txtBSurface">Surface</string>
    <string name="txtBInstallation">Installations</string>
    <string name="txtBTimeToAvoid">Time To Avoid</string>
    <string name="txtBGPS">GPS location</string>
    <string name="installation">Installation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_play_ground_sub_menu_bottom_bar_actitivy" translatable="false">
        PlayGroundSubMenuBottomBarActitivy
    </string>
    <string name="material">material</string>
    <string name="Label_NewWorker">New Worker</string>
    <string name="btnAddWorker">Add new Worker</string>
    <string name="Worker_brute_textView">Worker</string>
    <string name="btnInfoZone">Area information</string>
    <string name="LoginProblem">Wrong login or password</string>
    <string name="TaskModified">Task modified</string>
    <string name="settingsSaved">Settings saved</string>
    <string name="save">Save</string>
    <string name="btnPlayGround">Add New PlayGround</string>
    <string name="Label_NewPlayground">New Playground</string>
    <string name="NewPlayground">New Playground</string>
    <string name="TaskName">Task Name</string>
    <string name="Label_title_Application" translatable="false">PLAYGROUND MANAGER</string>
    <string name="Label_NewTask">New Task</string>
    <string name="Label_Setting">Settings</string>
    <string name="Label_LastUpdate">Last updates</string>
    <string name="Label_ListWorker">Worker\'s list</string>
    <string name="Label_DetailTask">Task Detail</string>
    <string name="Label_ListPlayGround">Playground\'s list</string>
    <string name="title_Application" translatable="false">PLAYGROUND MANAGER</string>
    <string name="newWorkerCreated">New worker created</string>
    <string name="newPlaygroundCreated">New playground created</string>
    <string name="newTaskCreated">New task created</string>
    <string name="NewWorker">NewWorker</string>
    <string name="btnTaskTerminate">Terminated</string>
    <string name="taskUpdate">Task terminated</string>
    <string name="workerDelete">Worker deleted</string>


</resources>
