<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Playground.NewPlayground">

    <EditText
        android:id="@+id/extGPS"
        android:layout_width="142dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBGPS"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etxtSurface"
        android:layout_width="142dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBSurface"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etxtPlacename"
        android:layout_width="142dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBName"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etxtTown"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBTown"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etxtTimeToAvoid"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBTimeToAvoid"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtBTown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtbTown"
        tools:text="@string/txtbTown"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="16dp" />



    <TextView
        android:id="@+id/txtBName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBName"
        tools:text="@string/txtBName"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/etxtTown"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtBSurface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBSurface"
        tools:text="@string/txtBSurface"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/etxtTimeToAvoid"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtBTimeToAvoid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBTimeToAvoid"
        tools:text="@string/txtBTimeToAvoid"
        android:layout_marginTop="141dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/txtBGPS"
        android:layout_width="84dp"
        android:layout_height="18dp"
        android:text="@string/txtBGPS"
        tools:text="@string/txtBGPS"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="267dp"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnSavePlayground"
        android:layout_width="347dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/save"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/extGPS"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>

