<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Task.NewTask">


    <TextView
        android:id="@+id/txtVPlayGroundName"
        android:layout_width="354dp"
        android:layout_height="57dp"
        android:background="@drawable/grey"
        android:textAlignment="center"
        android:textColor="@color/black_overlay"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="3dp"
        tools:text="@string/Playground_brute_textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/txtVTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description_brute_textView"
        android:textAlignment="center"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="85dp"
        tools:text="@string/TaskName"
        android:layout_above="@+id/eTextTaskName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/eTextTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="109dp"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/txtBDescritpion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/txtBDescritpion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description_brute_textView"
        android:textAlignment="center"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        tools:text="@string/Description_brute_textView"
        tools:layout_editor_absoluteY="172dp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_above="@+id/eTxtDescription"
        android:layout_alignLeft="@+id/eTxtDescription"
        android:layout_alignStart="@+id/eTxtDescription" />

    <EditText
        android:id="@+id/eTxtDescription"
        android:layout_width="351dp"
        android:layout_height="118dp"
        android:background="@drawable/lightblue"
        android:ems="10"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="196dp"
        android:layout_above="@+id/txtBObservation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/txtBObservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Observation_brute_textView"
        android:textAlignment="center"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        tools:text="@string/Observation_brute_textView"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="321dp"
        android:layout_marginBottom="7dp"
        android:layout_above="@+id/eTxtObservation"
        android:layout_alignLeft="@+id/eTxtDescription"
        android:layout_alignStart="@+id/eTxtDescription" />

    <EditText
        android:id="@+id/eTxtObservation"
        android:layout_width="364dp"
        android:layout_height="84dp"
        android:background="@drawable/lightblue"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="353dp"
        android:layout_above="@+id/btnSaveTask"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp" />


    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="338dp"
        android:layout_height="46dp"
        android:text="@string/save"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="446dp"
        tools:text="@string/save"
        android:layout_marginBottom="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/eTxtDescription"
        android:layout_alignEnd="@+id/eTxtDescription"
        android:layout_alignLeft="@+id/txtBObservation"
        android:layout_alignStart="@+id/txtBObservation" />


</RelativeLayout>
