<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Worker.NewWorkerActitivy">

    <EditText
        android:id="@+id/eTxtPassword"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:layout_marginEnd="43dp"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtFirstname"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/eTxtLogin"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:layout_marginEnd="43dp"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtPassword"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.918"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="25dp"
        android:text="@string/Login_textView"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/eTxtLogin"
        tools:text="@string/Login_textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="25dp"
        android:text="@string/textPassword"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtbFirstname"
        tools:text="@string/textPassword"
        app:layout_constraintRight_toLeftOf="@+id/eTxtPassword"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtbFirstname"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/Firstname_brute_textView"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtBlastName"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/Firstname_brute_textView"
        app:layout_constraintRight_toLeftOf="@+id/eTxtFirstname"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/eTxtFirstname"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:layout_marginEnd="43dp"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.548"
        android:layout_marginRight="43dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtBlastName"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/Lastname_brute_textView"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtbCellPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/Lastname_brute_textView"
        app:layout_constraintRight_toLeftOf="@+id/eTxtLastname"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/txtbCellPhone"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/Cellphone_brute_textView"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/Cellphone_brute_textView"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveWorker"
        app:layout_constraintRight_toLeftOf="@+id/eTxtCellphone"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/eTxtLastname"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTxtFirstname"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/eTxtCellphone"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/eTxtCellphone"
        android:layout_width="153dp"
        android:layout_height="43dp"
        android:layout_marginEnd="43dp"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        android:layout_marginRight="43dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="103dp" />

    <Button
        android:id="@+id/btnSaveWorker"
        android:layout_width="352dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/save" />

</android.support.constraint.ConstraintLayout>